--- a/packages/gpt-runner-core/package.json
+++ b/packages/gpt-runner-core/package.json
@@ -35,10 +35,17 @@
     "dist"
   ],
   "scripts": {
+    "dev": "pnpm dev:server",
+    "dev:server": "esno src/server/src/index.ts",
     "build": "unbuild",
     "stub": "unbuild --stub"
   },
+  "dependencies": {
+    "express": "^4.18.2",
+    "langchain": "^0.0.75"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "unconfig": "^0.3.7"
   }
 }
