--- a/packages/gpt-runner-core/package.json
+++ b/packages/gpt-runner-core/package.json
@@ -35,17 +35,32 @@
     "dist"
   ],
   "scripts": {
-    "dev": "pnpm dev:server",
+    "dev": "pnpm dev:server & pnpm dev:client",
+    "dev:client": "vite",
     "dev:server": "esno src/server/src/index.ts",
     "build": "unbuild",
     "stub": "unbuild --stub"
   },
   "dependencies": {
+    "@microsoft/fetch-event-source": "^2.0.1",
+    "@vscode/webview-ui-toolkit": "^1.2.2",
+    "clsx": "^1.2.1",
+    "eventemitter": "^0.3.3",
     "express": "^4.18.2",
-    "langchain": "^0.0.75"
+    "langchain": "^0.0.75",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
+    "react-syntax-highlighter": "^15.5.0",
+    "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "unconfig": "^0.3.7"
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "@types/react-syntax-highlighter": "^15.5.6",
+    "@vitejs/plugin-react": "^4.0.0",
+    "unconfig": "^0.3.7",
+    "vite": "^4.3.5"
   }
 }
