--- a/packages/gpt-runner-core/package.json
+++ b/packages/gpt-runner-core/package.json
@@ -36,7 +36,7 @@
   ],
   "scripts": {
     "dev": "pnpm dev:server & pnpm dev:client",
-    "dev:client": "vite",
+    "dev:client": "vite --config ./client/vite.config.ts",
     "dev:server": "esno src/server/src/index.ts",
     "build": "unbuild",
     "stub": "unbuild --stub"
@@ -47,15 +47,19 @@
     "clsx": "^1.2.1",
     "eventemitter": "^0.3.3",
     "express": "^4.18.2",
+    "framer-motion": "^10.12.10",
     "langchain": "^0.0.75",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
-    "styled-components": "^6.0.0-rc.1"
+    "styled-components": "^6.0.0-rc.1",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/lodash-es": "^4.17.7",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/react-syntax-highlighter": "^15.5.6",
