feat(gpt-runner-core): add react router dom

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,11 +12,14 @@
   // "typescript.inlayHints.functionLikeReturnTypes.enabled": true,
   "cSpell.words": [
     "Chatgpt",
+    "clsx",
     "codicon",
     "langchain",
     "nicepkg",
     "OPENAI",
     "tagify",
+    "tanstack",
+    "unconfig",
     "zustand"
   ],
   "workbench.colorCustomizations": {
