--- a/packages/gpt-runner-core/package.json
+++ b/packages/gpt-runner-core/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@tanstack/react-query": "^4.29.7",
     "@vscode/webview-ui-toolkit": "^1.2.2",
     "clsx": "^1.2.1",
     "eventemitter": "^0.3.3",
@@ -52,7 +53,9 @@
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.4",
     "react-markdown": "^8.0.7",
+    "react-router-dom": "^6.11.1",
     "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^6.0.0-rc.1",
     "zustand": "^4.3.8"
