--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -59,6 +59,7 @@
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-syntax-highlighter": "^15.5.0",
+    "react-use": "^17.4.0",
     "styled-components": "^6.0.0-rc.1",
     "zustand": "^4.3.8"
   },
