--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "dev": "pnpm dev:server & pnpm dev:client",
     "dev:client": "vite --config ./client/vite.config.ts",
-    "dev:server": "esno src/server/src/index.ts",
+    "dev:server": "esno server/src/index.ts",
     "build": "unbuild",
     "stub": "unbuild --stub"
   },
@@ -48,9 +48,11 @@
     "@tanstack/react-query": "^4.29.7",
     "@vscode/webview-ui-toolkit": "^1.2.2",
     "clsx": "^1.2.1",
+    "cors": "^2.8.5",
     "eventemitter": "^0.3.3",
     "express": "^4.18.2",
     "framer-motion": "^10.12.12",
+    "global-agent": "^3.0.0",
     "langchain": "^0.0.78",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
@@ -61,10 +63,13 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.4.0",
     "styled-components": "^6.0.0-rc.1",
+    "undici": "^5.22.1",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/global-agent": "^2.1.1",
     "@types/lodash-es": "^4.17.7",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
