--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -45,24 +45,24 @@
   "dependencies": {
     "@microsoft/fetch-event-source": "^2.0.1",
     "@nicepkg/gpt-runner-core": "workspace:*",
-    "@tanstack/react-query": "^4.29.7",
+    "@tanstack/react-query": "^4.29.11",
     "@vscode/webview-ui-toolkit": "^1.2.2",
     "clsx": "^1.2.1",
     "cors": "^2.8.5",
     "eventemitter": "^0.3.3",
     "express": "^4.18.2",
-    "framer-motion": "^10.12.12",
+    "framer-motion": "^10.12.16",
     "global-agent": "^3.0.0",
-    "langchain": "^0.0.78",
+    "langchain": "^0.0.84",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.4",
+    "react-error-boundary": "^4.0.7",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.4.0",
-    "styled-components": "^6.0.0-rc.1",
+    "styled-components": "^6.0.0-rc.2-4007",
     "undici": "^5.22.1",
     "zustand": "^4.3.8"
   },
@@ -71,11 +71,10 @@
     "@types/express": "^4.17.17",
     "@types/global-agent": "^2.1.1",
     "@types/lodash-es": "^4.17.7",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
-    "@types/react-syntax-highlighter": "^15.5.6",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "@vitejs/plugin-react": "^4.0.0",
-    "unconfig": "^0.3.7",
-    "vite": "^4.3.8"
+    "vite": "^4.3.9"
   }
 }
