feat(gpt-runner-shared): move common utils and types to shared package

--- a/packages/gpt-runner-cli/package.json
+++ b/packages/gpt-runner-cli/package.json
@@ -47,6 +47,7 @@
     "@rollup/pluginutils": "^5.0.2",
     "@nicepkg/gpt-runner-config": "workspace:*",
     "@nicepkg/gpt-runner-core": "workspace:*",
+    "@nicepkg/gpt-runner-shared": "workspace:*",
     "cac": "^6.7.14",
     "chokidar": "^3.5.3",
     "colorette": "^2.0.20",
