--- a/packages/gpt-runner-core/package.json
+++ b/packages/gpt-runner-core/package.json
@@ -40,6 +40,7 @@
     "stub": "unbuild --stub"
   },
   "dependencies": {
+    "@nicepkg/gpt-runner-shared": "workspace:*",
     "ignore": "^5.2.4",
     "langchain": "^0.0.84",
     "unconfig": "^0.3.9"
