--- a/packages/gpt-runner-shared/package.json
+++ b/packages/gpt-runner-shared/package.json
@@ -1,8 +1,62 @@
 {
   "name": "@nicepkg/gpt-runner-shared",
   "version": "0.0.1",
-  "private": true,
-  "dependencies": {
-    "@nicepkg/gpt-runner-core": "workspace:*"
+  "description": "",
+  "author": "Jinming Yang <2214962083@qq.com>",
+  "license": "MIT",
+  "funding": "https://github.com/sponsors/2214962083",
+  "homepage": "https://github.com/nicepkg/gpt-runner/tree/main/packages/gpt-runner-shared#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nicepkg/gpt-runner",
+    "directory": "packages/gpt-runner-shared"
+  },
+  "bugs": {
+    "url": "https://github.com/nicepkg/gpt-runner/issues"
+  },
+  "keywords": [
+    "gpt-runner",
+    "chatgpt",
+    "prompt",
+    "langchain",
+    "ai"
+  ],
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "types": "./dist/common.d.ts",
+      "require": "./dist/common.cjs",
+      "import": "./dist/common.mjs"
+    },
+    "./*": "./*",
+    "./browser": {
+      "types": "./dist/browser.d.ts",
+      "require": "./dist/browser.cjs",
+      "import": "./dist/browser.mjs"
+    },
+    "./common": {
+      "types": "./dist/common.d.ts",
+      "require": "./dist/common.cjs",
+      "import": "./dist/common.mjs"
+    },
+    "./node": {
+      "types": "./dist/node.d.ts",
+      "require": "./dist/node.cjs",
+      "import": "./dist/node.mjs"
+    }
+  },
+  "main": "dist/common.cjs",
+  "module": "dist/common.mjs",
+  "types": "dist/common.d.ts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "unbuild",
+    "stub": "unbuild --stub"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "express": "^4.18.2"
   }
 }
