--- a/packages/gpt-runner-vscode/package.json
+++ b/packages/gpt-runner-vscode/package.json
@@ -69,6 +69,7 @@
   "devDependencies": {
     "@types/vscode": "^1.71.0",
     "@nicepkg/gpt-runner": "workspace:*",
+    "@nicepkg/gpt-runner-shared": "workspace:*",
     "esno": "^0.16.3",
     "jiti": "^1.18.2",
     "prettier": "^2.8.8",
