--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -9,7 +9,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/nicepkg/gpt-runner",
-    "directory": "packages/core"
+    "directory": "packages/gpt-runner-web"
   },
   "bugs": {
     "url": "https://github.com/nicepkg/gpt-runner/issues"
@@ -45,6 +45,7 @@
   "dependencies": {
     "@microsoft/fetch-event-source": "^2.0.1",
     "@nicepkg/gpt-runner-core": "workspace:*",
+    "@nicepkg/gpt-runner-shared": "workspace:*",
     "@tanstack/react-query": "^4.29.11",
     "@vscode/webview-ui-toolkit": "^1.2.2",
     "clsx": "^1.2.1",
