--- a/packages/gpt-runner/package.json
+++ b/packages/gpt-runner/package.json
@@ -45,6 +45,7 @@
     "stub": "unbuild --stub"
   },
   "dependencies": {
-    "@nicepkg/gpt-runner-core": "workspace:*"
+    "@nicepkg/gpt-runner-core": "workspace:*",
+    "@nicepkg/gpt-runner-shared": "workspace:*"
   }
 }
