--- a/packages/gpt-runner-shared/package.json
+++ b/packages/gpt-runner-shared/package.json
@@ -55,6 +55,14 @@
     "build": "unbuild",
     "stub": "unbuild --stub"
   },
+  "peerDependencies": {
+    "debug": "*",
+    "minimatch": "*"
+  },
+  "dependencies": {
+    "debug": "^4.3.4",
+    "minimatch": "^9.0.1"
+  },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "express": "^4.18.2"
