--- a/packages/gpt-runner-shared/package.json
+++ b/packages/gpt-runner-shared/package.json
@@ -57,11 +57,13 @@
   },
   "peerDependencies": {
     "debug": "*",
-    "minimatch": "*"
+    "minimatch": "*",
+    "zod": "*"
   },
   "dependencies": {
     "debug": "^4.3.4",
-    "minimatch": "^9.0.1"
+    "minimatch": "^9.0.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
