--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -63,6 +63,7 @@
     "react-router-dom": "^6.11.2",
     "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.4.0",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^6.0.0-rc.2-4007",
     "undici": "^5.22.1",
     "zustand": "^4.3.8"
