--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -66,6 +66,7 @@
     "remark-gfm": "^3.0.1",
     "styled-components": "^6.0.0-rc.2-4007",
     "undici": "^5.22.1",
+    "uuid": "^9.0.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
@@ -76,6 +77,7 @@
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "@types/react-syntax-highlighter": "^15.5.7",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^4.3.9"
   }
