--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -24,22 +24,36 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
+      "types": "./dist/common.d.ts",
+      "require": "./dist/common.cjs",
+      "import": "./dist/common.mjs"
+    },
+    "./*": "./*",
+    "./server": {
+      "types": "./dist/server.d.ts",
+      "require": "./dist/server.cjs",
+      "import": "./dist/server.mjs"
+    },
+    "./common": {
+      "types": "./dist/common.d.ts",
+      "require": "./dist/common.cjs",
+      "import": "./dist/common.mjs"
     }
   },
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "dist/common.cjs",
+  "module": "dist/common.mjs",
+  "types": "dist/common.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
+    "build": "pnpm build:server & pnpm build:client",
+    "build:client": "vite build --config ./client/vite.config.ts",
+    "build:server": "unbuild",
     "dev": "pnpm dev:server & pnpm dev:client",
     "dev:client": "vite --config ./client/vite.config.ts",
-    "dev:server": "esno server/src/index.ts",
-    "build": "unbuild",
+    "dev:server": "esno server/index.ts",
+    "start": "node dist/server.cjs",
     "stub": "unbuild --stub"
   },
   "dependencies": {
@@ -49,6 +63,7 @@
     "@tanstack/react-query": "^4.29.11",
     "@vscode/webview-ui-toolkit": "^1.2.2",
     "clsx": "^1.2.1",
+    "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
     "eventemitter": "^0.3.3",
     "express": "^4.18.2",
@@ -70,6 +85,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/connect-history-api-fallback": "^1.5.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/global-agent": "^2.1.1",
