feat(gpt-runner-web): add remote state

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,11 +14,16 @@
     "Chatgpt",
     "clsx",
     "codicon",
+    "esno",
+    "execa",
     "gptr",
     "Jinming",
     "langchain",
+    "localstorage",
     "nicepkg",
     "OPENAI",
+    "OVSE",
+    "ovsx",
     "tabpanel",
     "tagify",
     "tanstack",
