--- a/packages/gpt-runner-vscode/package.json
+++ b/packages/gpt-runner-vscode/package.json
@@ -24,10 +24,38 @@
     "onStartupFinished"
   ],
   "contributes": {
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "gpt-runner",
+          "title": "GPT Runner",
+          "icon": "res/sidebar-icon.png"
+        }
+      ]
+    },
+    "views": {
+      "gpt-runner": [
+        {
+          "type": "webview",
+          "id": "gpt-runner.chatView",
+          "name": "GPT Runner Chat"
+        }
+      ]
+    },
     "commands": [
       {
         "command": "gpt-runner.reload",
         "title": "Reload GPT Runner",
+        "category": "GPT Runner"
+      },
+      {
+        "command": "gpt-runner.restartServer",
+        "title": "GPT Runner Restart Server",
+        "category": "GPT Runner"
+      },
+      {
+        "command": "gpt-runner.openChat",
+        "title": "GPT Runner Open Chat",
         "category": "GPT Runner"
       }
     ],
@@ -50,10 +78,10 @@
   },
   "devDependencies": {
     "@types/vscode": "^1.71.0",
-    "@nicepkg/gpt-runner": "workspace:*",
+    "@nicepkg/gpt-runner-web": "workspace:*",
     "@nicepkg/gpt-runner-shared": "workspace:*",
     "esno": "^0.16.3",
     "eventemitter3": "^5.0.1",
-    "unconfig": "^0.3.7"
+    "unconfig": "^0.3.9"
   }
 }
