fix(gpt-runner-web): server proxy throw error

--- a/packages/gpt-runner-vscode/package.json
+++ b/packages/gpt-runner-vscode/package.json
@@ -38,7 +38,7 @@
         {
           "type": "webview",
           "id": "gpt-runner.chatView",
-          "name": "GPT Runner Chat"
+          "name": ""
         }
       ]
     },
