feat(gpt-runner-server): add auto find free port support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
   // "typescript.inlayHints.functionLikeReturnTypes.enabled": true,
   "cSpell.words": [
     "cachedir",
+    "ccsp",
     "Chatgpt",
     "clsx",
     "codicon",
