--- a/packages/gpt-runner-shared/package.json
+++ b/packages/gpt-runner-shared/package.json
@@ -57,11 +57,13 @@
   },
   "peerDependencies": {
     "debug": "*",
+    "find-free-ports": "*",
     "minimatch": "*",
     "zod": "*"
   },
   "dependencies": {
     "debug": "^4.3.4",
+    "find-free-ports": "^3.1.1",
     "minimatch": "^9.0.1",
     "zod": "^3.21.4"
   },
