--- a/packages/gpt-runner-vscode/package.json
+++ b/packages/gpt-runner-vscode/package.json
@@ -71,12 +71,15 @@
     "dev": "tsup --watch src",
     "publish": "esno ./scripts/publish.ts"
   },
-  "devDependencies": {
-    "@types/vscode": "^1.71.0",
+  "dependencies": {
     "@nicepkg/gpt-runner-web": "workspace:*",
     "@nicepkg/gpt-runner-shared": "workspace:*",
-    "esno": "^0.16.3",
     "eventemitter3": "^5.0.1",
-    "unconfig": "^0.3.9"
+    "open": "^9.1.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.71.0",
+    "esno": "^0.16.3"
   }
 }
