--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ coverage
 dist
 examples/**/pnpm-lock.yaml
 node_modules
+playground/.vscode
 packages/gpt-runner/README.md
 packages/gpt-runner-vscode/LICENSE
 result.json
