feat(gpt-runner-cli): complete cli

--- a/packages/gpt-runner-config/package.json
+++ b/packages/gpt-runner-config/package.json
@@ -14,7 +14,12 @@
   "bugs": {
     "url": "https://github.com/nicepkg/gpt-runner/issues"
   },
-  "keywords": [],
+  "keywords": [
+    "gpt-runner",
+    "chatgpt",
+    "prompt",
+    "ai"
+  ],
   "sideEffects": false,
   "exports": {
     ".": {
