--- a/packages/gpt-runner-cli/package.json
+++ b/packages/gpt-runner-cli/package.json
@@ -13,21 +13,18 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/nicepkg/gpt-runner",
-    "directory": "packages/cli"
+    "directory": "packages/gpt-runner-cli"
   },
   "bugs": {
     "url": "https://github.com/nicepkg/gpt-runner/issues"
   },
-  "keywords": [],
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs"
-    }
-  },
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "keywords": [
+    "gpt-runner",
+    "chatgpt",
+    "prompt",
+    "langchain",
+    "ai"
+  ],
   "bin": {
     "gptr": "./bin/gpt-runner.mjs"
   },
@@ -43,18 +40,14 @@
     "stub": "unbuild --stub"
   },
   "dependencies": {
-    "@ampproject/remapping": "^2.2.1",
-    "@rollup/pluginutils": "^5.0.2",
-    "@nicepkg/gpt-runner-config": "workspace:*",
     "@nicepkg/gpt-runner-core": "workspace:*",
     "@nicepkg/gpt-runner-shared": "workspace:*",
+    "@nicepkg/gpt-runner-web": "workspace:*",
     "cac": "^6.7.14",
     "chokidar": "^3.5.3",
     "colorette": "^2.0.20",
     "consola": "^3.1.0",
-    "fast-glob": "^3.2.12",
-    "magic-string": "^0.30.0",
-    "pathe": "^1.1.0",
-    "perfect-debounce": "^1.0.0"
+    "execa": "^7.1.1",
+    "wait-port": "^1.0.4"
   }
 }
