--- a/packages/gpt-runner-vscode/package.json
+++ b/packages/gpt-runner-vscode/package.json
@@ -80,6 +80,8 @@
   },
   "devDependencies": {
     "@types/vscode": "^1.71.0",
-    "esno": "^0.16.3"
+    "esno": "^0.16.3",
+    "execa": "^7.1.1",
+    "fs-extra": "^11.1.1"
   }
 }
