--- a/playground/package.json
+++ b/playground/package.json
@@ -7,5 +7,8 @@
     "build": "vite build",
     "update-post": "vite build",
     "serve": "vite preview"
+  },
+  "devDependencies": {
+    "@nicepkg/gpt-runner": "workspace:*"
   }
 }
