--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -84,6 +84,7 @@
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tiny-popover": "^7.2.4",
     "react-use": "^17.4.0",
     "remark-gfm": "^3.0.1",
     "styled-components": "^6.0.0-rc.2-4007",
