--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -76,6 +76,7 @@
     "express": "^4.18.2",
     "framer-motion": "^10.12.16",
     "global-agent": "^3.0.0",
+    "keyboardjs": "^2.7.0",
     "langchain": "^0.0.84",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
@@ -97,6 +98,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/global-agent": "^2.1.1",
+    "@types/keyboardjs": "^2.5.1",
     "@types/lodash-es": "^4.17.7",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
