feat: Add postinstall script

--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "private": true,
   "packageManager": "pnpm@8.4.0",
   "scripts": {
-    "taze": "taze minor -wIr && pnpm -r --parallel run update-post",
     "build": "rimraf packages/*/dist && esno scripts/copy-files.ts && pnpm -r --filter=./packages/* run build && pnpm -r run build-post",
     "dev": "pnpm stub",
     "play": "npm -C playground run dev",
     "lint": "eslint --cache .",
     "lint:fix": "pnpm lint --fix",
+    "postinstall": "pnpm build",
     "release": "bumpp -r",
     "stub": "pnpm -r --filter=./packages/* --parallel run stub",
+    "taze": "taze minor -wIr && pnpm -r --parallel run update-post",
     "typecheck": "tsc --noEmit",
     "test": "vitest",
     "test:update": "vitest -u",
