feat(gpt-runner-web): add file tree component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,9 +20,11 @@
     "codicon",
     "colorette",
     "consola",
+    "dylib",
     "esbuild",
     "esno",
     "execa",
+    "flac",
     "gptr",
     "hideable",
     "Jinming",
