--- a/packages/gpt-runner-core/package.json
+++ b/packages/gpt-runner-core/package.json
@@ -42,7 +42,8 @@
   "dependencies": {
     "@nicepkg/gpt-runner-shared": "workspace:*",
     "ignore": "^5.2.4",
-    "langchain": "^0.0.84",
+    "langchain": "^0.0.95",
+    "tiktoken": "^1.0.7",
     "unconfig": "^0.3.9"
   }
 }
