--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -64,7 +64,8 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@nicepkg/gpt-runner-core": "workspace:*",
     "@nicepkg/gpt-runner-shared": "workspace:*",
-    "@tanstack/react-query": "^4.29.11",
+    "@tanstack/react-query": "^4.29.13",
+    "@use-gesture/react": "^10.2.27",
     "@vscode/webview-ui-toolkit": "^1.2.2",
     "clsx": "^1.2.1",
     "commander": "^10.0.1",
@@ -76,13 +77,13 @@
     "framer-motion": "^10.12.16",
     "global-agent": "^3.0.0",
     "keyboardjs": "^2.7.0",
-    "langchain": "^0.0.84",
+    "langchain": "^0.0.95",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.7",
+    "react-error-boundary": "^4.0.10",
     "react-markdown": "^8.0.7",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.13.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-tiny-popover": "^7.2.4",
     "react-use": "^17.4.0",
@@ -99,10 +100,10 @@
     "@types/global-agent": "^2.1.1",
     "@types/keyboardjs": "^2.5.1",
     "@types/lodash-es": "^4.17.7",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "@types/react-syntax-highlighter": "^15.5.7",
-    "@types/uuid": "^9.0.1",
+    "@types/uuid": "^9.0.2",
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^4.3.9"
   }
