--- a/packages/gpt-runner-shared/package.json
+++ b/packages/gpt-runner-shared/package.json
@@ -77,7 +77,8 @@
     "minimatch": "^9.0.1",
     "socket.io": "^4.6.2",
     "socket.io-client": "^4.6.2",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zod-to-json-schema": "^3.21.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
