--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -82,6 +82,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
+    "react-hook-form": "^7.44.3",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.13.0",
     "react-syntax-highlighter": "^15.5.0",
