feat(gpt-runner-vscode): add build visx script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,8 +43,10 @@
     "tagify",
     "tanstack",
     "tiktoken",
+    "tsup",
     "unconfig",
     "uuidv",
+    "vsix",
     "zustand"
   ],
   "workbench.colorCustomizations": {
