--- a/packages/gpt-runner-vscode/package.json
+++ b/packages/gpt-runner-vscode/package.json
@@ -83,6 +83,7 @@
   },
   "scripts": {
     "build": "tsup",
+    "build:vsix": "pnpm esno ./scripts/build.ts",
     "dev": "tsup --watch src",
     "publish": "esno ./scripts/publish.ts"
   },
@@ -95,6 +96,7 @@
   },
   "devDependencies": {
     "@types/vscode": "^1.71.0",
+    "@vscode/vsce": "^2.19.0",
     "esno": "^0.16.3",
     "execa": "^7.1.1",
     "fs-extra": "^11.1.1"
