--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -36,8 +36,8 @@
     // with our declaration files (mostly names that are forgotten to be
     // imported, invalid semantics...). Because we don't have end-to-end type
     // tests, removing this would make things much harder to catch.
-    "skipLibCheck": false,
+    "skipLibCheck": false
   },
   "include": [".", "*.ts"],
-  "exclude": ["src/sw.js", "node_modules"],
+  "exclude": ["src/sw.js", "node_modules"]
 }
