--- a/packages/gpt-runner-shared/package.json
+++ b/packages/gpt-runner-shared/package.json
@@ -48,9 +48,6 @@
   "main": "dist/common.cjs",
   "module": "dist/common.mjs",
   "types": "dist/common.d.ts",
-  "files": [
-    "dist"
-  ],
   "scripts": {
     "build": "unbuild && pnpm build:json-schema",
     "build:json-schema": "pnpm esno ./scripts/zod-to-json-schema.ts",
@@ -75,6 +72,7 @@
     "find-free-ports": "^3.1.1",
     "ip": "^1.1.8",
     "minimatch": "^9.0.1",
+    "open": "^8.4.2",
     "socket.io": "^4.6.2",
     "socket.io-client": "^4.6.2",
     "zod": "^3.21.4",
