--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -24,33 +24,30 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "types": "./dist/common.d.ts",
+      "types": "./common.d.ts",
       "require": "./dist/common.cjs",
       "import": "./dist/common.mjs"
     },
     "./*": "./*",
     "./server": {
-      "types": "./dist/server.d.ts",
+      "types": "./server.d.ts",
       "require": "./dist/server.cjs",
       "import": "./dist/server.mjs"
     },
     "./start-server": {
-      "types": "./dist/start-server.d.ts",
+      "types": "./start-server.d.ts",
       "require": "./dist/start-server.cjs",
       "import": "./dist/start-server.mjs"
     },
     "./common": {
-      "types": "./dist/common.d.ts",
+      "types": "./common.d.ts",
       "require": "./dist/common.cjs",
       "import": "./dist/common.mjs"
     }
   },
   "main": "dist/common.cjs",
   "module": "dist/common.mjs",
-  "types": "dist/common.d.ts",
-  "files": [
-    "dist"
-  ],
+  "types": "./common.d.ts",
   "scripts": {
     "build": "pnpm build:server & pnpm build:client",
     "build:client": "vite build --config ./client/vite.config.ts",
@@ -60,12 +57,23 @@
     "start": "cross-env NODE_OPTIONS='--experimental-fetch' NODE_NO_WARNINGS='1' DEBUG='enabled' node dist/start-server.cjs --auto-free-port",
     "stub": "unbuild --stub"
   },
-  "dependencies": {
+  "devDependencies": {
     "@microsoft/fetch-event-source": "^2.0.1",
     "@nicepkg/gpt-runner-core": "workspace:*",
     "@nicepkg/gpt-runner-shared": "workspace:*",
     "@tanstack/react-query": "^4.29.13",
+    "@types/connect-history-api-fallback": "^1.5.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/global-agent": "^2.1.1",
+    "@types/keyboardjs": "^2.5.1",
+    "@types/lodash-es": "^4.17.7",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "@types/react-syntax-highlighter": "^15.5.7",
+    "@types/uuid": "^9.0.2",
     "@use-gesture/react": "^10.2.27",
+    "@vitejs/plugin-react": "^4.0.0",
     "@vscode/webview-ui-toolkit": "^1.2.2",
     "clsx": "^1.2.1",
     "commander": "^10.0.1",
@@ -92,20 +100,7 @@
     "styled-components": "^6.0.0-rc.2-4007",
     "undici": "^5.22.1",
     "uuid": "^9.0.0",
+    "vite": "^4.3.9",
     "zustand": "^4.3.8"
-  },
-  "devDependencies": {
-    "@types/connect-history-api-fallback": "^1.5.0",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/global-agent": "^2.1.1",
-    "@types/keyboardjs": "^2.5.1",
-    "@types/lodash-es": "^4.17.7",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
-    "@types/react-syntax-highlighter": "^15.5.7",
-    "@types/uuid": "^9.0.2",
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.3.9"
   }
 }
