--- a/packages/gpt-runner-config/package.json
+++ b/packages/gpt-runner-config/package.json
@@ -31,8 +31,13 @@
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist/",
+    "LICENSE",
+    "*.md"
+  ],
   "engines": {
-    "node": ">=14"
+    "node": ">=16.18.0"
   },
   "scripts": {
     "build": "unbuild",
