--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install Dependencies And Build
         run: pnpm i
 
+      - name: Package Alias Copy
+        run: pnpm pkg:alias
+
       - name: Publish to NPM
         run: pnpm -r publish --access public --no-git-checks
         env:
