feat(gpt-runner-web): optimize file tree popover menu request multiple

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,9 +33,11 @@
     "linebreak",
     "localstorage",
     "nicepkg",
+    "nuxt",
     "OPENAI",
     "OVSE",
     "ovsx",
+    "pycache",
     "rehype",
     "rubberband",
     "tablist",
