feat(gpt-runner-web): add open editor when click match path in answer

--- a/packages/gpt-runner-shared/package.json
+++ b/packages/gpt-runner-shared/package.json
@@ -76,6 +76,7 @@
     "debug": "*",
     "find-free-ports": "*",
     "ip": "*",
+    "launch-editor": "*",
     "minimatch": "*",
     "socket.io": "*",
     "socket.io-client": "*",
@@ -88,6 +89,7 @@
     "debug": "^4.3.4",
     "find-free-ports": "^3.1.1",
     "ip": "^1.1.8",
+    "launch-editor": "^2.6.0",
     "minimatch": "^9.0.1",
     "open": "^8.4.2",
     "socket.io": "^4.6.2",
