--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -115,6 +115,7 @@
     "remark-gfm": "^3.0.1",
     "styled-components": "^6.0.0-rc.2-4007",
     "undici": "^5.22.1",
+    "unist-util-visit": "^4.1.2",
     "uuid": "^9.0.0",
     "vite": "^4.3.9",
     "zustand": "^4.3.8"
