feat(gpt-runner-web): add locales for multiple lang

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
     "codicon",
     "colorette",
     "consola",
+    "Deutsch",
     "dylib",
     "esbuild",
     "esno",
@@ -37,7 +38,9 @@
     "Jinming",
     "keyboardjs",
     "langchain",
+    "languagedetector",
     "linebreak",
+    "listbox",
     "localstorage",
     "nicepkg",
     "nuxt",
