--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -100,6 +100,9 @@
     "express": "^4.18.2",
     "framer-motion": "^10.12.16",
     "global-agent": "^3.0.0",
+    "i18next": "^23.2.3",
+    "i18next-browser-languagedetector": "^7.0.2",
+    "i18next-http-backend": "^2.2.1",
     "keyboardjs": "^2.7.0",
     "langchain": "^0.0.95",
     "lodash-es": "^4.17.21",
@@ -107,6 +110,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
     "react-hook-form": "^7.44.3",
+    "react-i18next": "^13.0.1",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.13.0",
     "react-syntax-highlighter": "^15.5.0",
