--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -110,6 +110,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
     "react-hook-form": "^7.44.3",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.0.1",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.13.0",
