feat(gpt-runner-shared): add  tunnel

--- a/packages/gpt-runner-shared/package.json
+++ b/packages/gpt-runner-shared/package.json
@@ -72,9 +72,13 @@
   },
   "peerDependencies": {
     "@kvs/node-localstorage": "*",
+    "@kvs/storage": "*",
+    "axios": "*",
     "cachedir": "*",
     "debug": "*",
     "find-free-ports": "*",
+    "http-proxy-agent": "*",
+    "https-proxy-agent": "*",
     "ip": "*",
     "launch-editor": "*",
     "minimatch": "*",
@@ -85,9 +89,12 @@
   "dependencies": {
     "@kvs/node-localstorage": "^2.1.3",
     "@kvs/storage": "^2.1.3",
+    "axios": "^1.4.0",
     "cachedir": "^2.3.0",
     "debug": "^4.3.4",
     "find-free-ports": "^3.1.1",
+    "http-proxy-agent": "^7.0.0",
+    "https-proxy-agent": "^7.0.0",
     "ip": "^1.1.8",
     "launch-editor": "^2.6.0",
     "minimatch": "^9.0.1",
