--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -21,7 +21,7 @@
     "langchain",
     "ai"
   ],
-  "sideEffects": false,
+  "sideEffects": true,
   "exports": {
     ".": {
       "types": "./dist/common/index.d.ts",
@@ -77,19 +77,19 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@nicepkg/gpt-runner-core": "workspace:*",
     "@nicepkg/gpt-runner-shared": "workspace:*",
-    "@tanstack/react-query": "^4.29.13",
+    "@tanstack/react-query": "^4.29.17",
     "@types/connect-history-api-fallback": "^1.5.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/global-agent": "^2.1.1",
     "@types/keyboardjs": "^2.5.1",
     "@types/lodash-es": "^4.17.7",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@types/react-syntax-highlighter": "^15.5.7",
     "@types/uuid": "^9.0.2",
     "@use-gesture/react": "^10.2.27",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-react": "^4.0.1",
     "@vscode/webview-ui-toolkit": "^1.2.2",
     "clsx": "^1.2.1",
     "commander": "^10.0.1",
@@ -98,22 +98,22 @@
     "cross-env": "^7.0.3",
     "eventemitter": "^0.3.3",
     "express": "^4.18.2",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^10.12.17",
     "global-agent": "^3.0.0",
     "i18next": "^23.2.3",
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-http-backend": "^2.2.1",
     "keyboardjs": "^2.7.0",
-    "langchain": "^0.0.95",
+    "langchain": "^0.0.96",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
-    "react-hook-form": "^7.44.3",
+    "react-hook-form": "^7.45.0",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.0.1",
     "react-markdown": "^8.0.7",
-    "react-router-dom": "^6.13.0",
+    "react-router-dom": "^6.14.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-tiny-popover": "^7.2.4",
     "react-use": "^17.4.0",
