feat(gpt-runner-web): refresh userconfig and gpt file info when look them

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
     "yml/no-empty-document": "off",
     "react/no-unknown-property": "off",
     "no-console": "off",
-    "no-mixed-operators": "off"
+    "no-mixed-operators": "off",
+    "no-restricted-globals": "off"
   },
   "overrides": [
     {
