ci: add release ci for vscode extension

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,9 +42,9 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
           NPM_CONFIG_PROVENANCE: true
 
-      # - name: Publish to VSCE & OVSX
-      #   run: npm run publish
-      #   working-directory: ./packages/gpt-runner-vscode
-      #   env:
-      #     VSCE_TOKEN: ${{secrets.VSCE_TOKEN}}
-      #     OVSX_TOKEN: ${{secrets.OVSX_TOKEN}}
+      - name: Publish to VSCE & OVSX
+        run: npm run publish
+        working-directory: ./packages/gpt-runner-vscode
+        env:
+          VSCE_TOKEN: ${{secrets.VSCE_TOKEN}}
+          OVSX_TOKEN: ${{secrets.OVSX_TOKEN}}
