--- a/packages/gpt-runner-vscode/package.json
+++ b/packages/gpt-runner-vscode/package.json
@@ -115,6 +115,7 @@
     "eventemitter3": "^5.0.1",
     "execa": "^7.1.1",
     "fs-extra": "^11.1.1",
+    "jiti": "^1.18.2",
     "uuid": "^9.0.0"
   }
 }
