--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -65,6 +65,7 @@
   "scripts": {
     "build": "pnpm build:server & pnpm build:client",
     "build:client": "vite build --config ./client/vite.config.ts",
+    "build:client:watch": "vite build --config ./client/vite.config.ts --watch",
     "build:server": "unbuild && pnpm tsc --build tsconfig.dts.json",
     "dev:client": "vite --config ./client/vite.config.ts",
     "dev:server": "cross-env NODE_ENV=development NODE_OPTIONS='--experimental-fetch' NODE_NO_WARNINGS='1' DEBUG='enabled' pnpm esno server/start-server.ts --auto-free-port",
@@ -77,7 +78,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@nicepkg/gpt-runner-core": "workspace:*",
     "@nicepkg/gpt-runner-shared": "workspace:*",
-    "@tanstack/react-query": "^4.29.17",
+    "@tanstack/react-query": "^4.29.19",
     "@types/connect-history-api-fallback": "^1.5.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -100,16 +101,16 @@
     "express": "^4.18.2",
     "framer-motion": "^10.12.17",
     "global-agent": "^3.0.0",
-    "i18next": "^23.2.3",
-    "i18next-browser-languagedetector": "^7.0.2",
+    "i18next": "^23.2.6",
+    "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
     "keyboardjs": "^2.7.0",
-    "langchain": "^0.0.96",
+    "langchain": "^0.0.100",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
-    "react-hook-form": "^7.45.0",
+    "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.0.1",
     "react-markdown": "^8.0.7",
@@ -118,7 +119,7 @@
     "react-tiny-popover": "^7.2.4",
     "react-use": "^17.4.0",
     "remark-gfm": "^3.0.1",
-    "styled-components": "^6.0.0-rc.2-4007",
+    "styled-components": "^6.0.1",
     "undici": "^5.22.1",
     "unist-util-visit": "^4.1.2",
     "uuid": "^9.0.0",
