--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
     "react/no-unknown-property": "off",
     "no-console": "off",
     "no-mixed-operators": "off",
-    "no-restricted-globals": "off"
+    "no-restricted-globals": "off",
+    "unicorn/prefer-number-properties": "off"
   },
   "overrides": [
     {
