--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -73,6 +73,7 @@
     "stub": "unbuild --stub"
   },
   "devDependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@kvs/node-localstorage": "^2.1.3",
     "@kvs/storage": "^2.1.3",
     "@microsoft/fetch-event-source": "^2.0.1",
