--- a/packages/gpt-runner-vscode/package.json
+++ b/packages/gpt-runner-vscode/package.json
@@ -116,6 +116,7 @@
     "execa": "^7.1.1",
     "fs-extra": "^11.1.1",
     "jiti": "^1.18.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "wait-port": "^1.0.4"
   }
 }
