--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ website/i18n/**/*
 
 .gpt-runner
 packages/gpt-runner-web/client/public/monaco-editor-vs
+
+# gpt-runner-intellij
+packages/gpt-runner-intellij/src/main/resources/dist.zip
+packages/gpt-runner-intellij/src/main/resources/gpt-runner-bundler.zip
