feat(gpt-runner-vscode): support without nodejs need

--- a/.tazerc.json
+++ b/.tazerc.json
@@ -4,7 +4,8 @@
     "unbuild",
     "msw",
     "open",
-    "commander"
+    "commander",
+    "axios"
   ],
   "packageMode": {
     "react": "minor"
