--- a/packages/gpt-runner-shared/package.json
+++ b/packages/gpt-runner-shared/package.json
@@ -89,7 +89,7 @@
   "dependencies": {
     "@kvs/node-localstorage": "^2.1.3",
     "@kvs/storage": "^2.1.3",
-    "axios": "^1.4.0",
+    "axios": "1.3.4",
     "cachedir": "^2.3.0",
     "debug": "^4.3.4",
     "find-free-ports": "^3.1.1",
