--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,8 @@ website/netlifyDeployPreview/*
 website/changelog
 !website/netlifyDeployPreview/index.html
 !website/netlifyDeployPreview/_redirects
-
 website/_dogfooding/_swizzle_theme_tests
-
 website/i18n/**/*
 
 .gpt-runner
+packages/gpt-runner-web/client/public/monaco-editor-vs
