--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -97,12 +97,14 @@
     "eventemitter": "^0.3.3",
     "express": "^4.18.2",
     "framer-motion": "^10.12.18",
+    "fs-extra": "^11.1.1",
     "global-agent": "^3.0.0",
     "i18next": "^23.2.6",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
     "keyboardjs": "^2.7.0",
     "lodash-es": "^4.17.21",
+    "monaco-editor": "^0.39.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
