--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -122,6 +122,7 @@
     "unist-util-visit": "^4.1.2",
     "uuid": "^9.0.0",
     "vite": "^4.3.9",
+    "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-svgr": "^3.2.0",
     "zustand": "^4.3.8"
   }
