--- a/packages/gpt-runner-core/package.json
+++ b/packages/gpt-runner-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nicepkg/gpt-runner-core",
   "version": "0.6.1",
-  "description": "",
+  "description": "Core module for GPT-Runner providing config file parser and LLM connection utilities.",
   "author": "Jinming Yang <2214962083@qq.com>",
   "license": "MIT",
   "funding": "https://github.com/sponsors/2214962083",
@@ -16,10 +16,14 @@
   },
   "keywords": [
     "gpt-runner",
+    "langchain",
     "chatgpt",
     "prompt",
-    "langchain",
-    "ai"
+    "ai",
+    "storybook",
+    "openai",
+    "huggingFace",
+    "anthropic"
   ],
   "sideEffects": false,
   "exports": {
