--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nicepkg/gpt-runner-web",
   "version": "0.6.1",
-  "description": "",
+  "description": "Gpt-runner Web is a significant part of GPT-Runner, providing a web interface for users to interact with AI-powered code automation tool with enhanced efficiency. It uses Express for the server-side and React + Vite for the client side.",
   "author": "Jinming Yang <2214962083@qq.com>",
   "license": "MIT",
   "funding": "https://github.com/sponsors/2214962083",
@@ -16,10 +16,14 @@
   },
   "keywords": [
     "gpt-runner",
+    "langchain",
     "chatgpt",
     "prompt",
-    "langchain",
-    "ai"
+    "ai",
+    "storybook",
+    "openai",
+    "huggingFace",
+    "anthropic"
   ],
   "sideEffects": true,
   "exports": {
