--- a/packages/gpt-runner-shared/package.json
+++ b/packages/gpt-runner-shared/package.json
@@ -88,7 +88,8 @@
     "minimatch": "*",
     "socket.io": "*",
     "socket.io-client": "*",
-    "zod": "*"
+    "zod": "*",
+    "zod-to-json-schema": "*"
   },
   "dependencies": {
     "@kvs/node-localstorage": "^2.1.3",
@@ -101,7 +102,7 @@
     "https-proxy-agent": "^7.0.0",
     "ip": "^1.1.8",
     "launch-editor": "^2.6.0",
-    "minimatch": "^9.0.2",
+    "minimatch": "^9.0.3",
     "open": "^8.4.2",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
