--- a/packages/gpt-runner-shared/package.json
+++ b/packages/gpt-runner-shared/package.json
@@ -84,6 +84,7 @@
     "http-proxy-agent": "*",
     "https-proxy-agent": "*",
     "ip": "*",
+    "jsonc-parser": "*",
     "launch-editor": "*",
     "minimatch": "*",
     "socket.io": "*",
@@ -99,15 +100,16 @@
     "debug": "^4.3.4",
     "find-free-ports": "^3.1.1",
     "http-proxy-agent": "^7.0.0",
-    "https-proxy-agent": "^7.0.0",
+    "https-proxy-agent": "^7.0.1",
     "ip": "^1.1.8",
+    "jsonc-parser": "^3.2.0",
     "launch-editor": "^2.6.0",
     "minimatch": "^9.0.3",
     "open": "^8.4.2",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
     "zod": "^3.21.4",
-    "zod-to-json-schema": "^3.21.3"
+    "zod-to-json-schema": "^3.21.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
